trunk/Archive2/90/228c8b011ca474/output
+ g++ -Wall -Wextra main.cpp
main.cpp: In function 'int main()':
main.cpp:22:18: error: conversion from 'Wrap<int>(std::string (*)()) {aka Wrap<int>(std::basic_string<char> (*)())}' to non-scalar type 'main()::<anonymous struct>' requested
     struct{} _ = wrap;
                  ^
